# SERVE

./: .gitignore  README.md  docker-compose.yml  new_design_reference.html  tag_send_toserv.sh  tunnel_to_db.sh
ai-services/: Dockerfile  README.md  Uagent.py  Yagent.py  Zagent.py  baseagent.py  clusterization.py  competition.py  competition_scrutinizer.py  main.py  nodes.py  pyproject.toml  schemas.py
app/: pubspec.yaml
app/android/app/: build.gradle.kts  google-services.json
app/android/app/src/main/: AndroidManifest.xml
app/ios/Runner/: Info.plist
app/lib/: api.dart  auth_provider.dart  firebase_api.dart  firebase_options.dart  logger.dart  main.dart  utils.dart  widgets.dart
app/lib/screens/: base.dart  business_detail.dart  chat.dart  chats.dart  community_posts.dart  createbusiness.dart  createcommunity.dart  createpost.dart  init_screen.dart  me.dart  my_analyses.dart  newcomers.dart  postdetail.dart  posts.dart  register.dart  searchpost.dart  settings.dart  view_analysis.dart
app/macos/Flutter/: GeneratedPluginRegistrant.swift
app/web/: Dockerfile  index.html  manifest.json  nginx.conf
back/: .env.example  Dockerfile  aiapi.py  auth.py  businesses.py  chats.py  communities.py  emails.py  entrypoint.sh  integrations.py  main.py  minio_conn.py  notifications.py  payments.py  phones.py  postgres_conn.py  posts.py  pyproject.toml  ranking.py  red_flags.py  schemas.py  users.py  utils.py  valkey_conn.py  vecutils.py
back/migrations/: env.py
back/migrations/versions/: 272f9e5d1f4e_init.py  79d833f1c51f_reintroduced_image_bool_into_the_.py  a5c93ebf9e34_removed_image_urls_from_postgres.py  c519bf6e7e88_firebase_device_token_added.py  cca55ed81805_feeddback_table.py  ccfb10350c8b_is_the_tunnel_open.py  e0446b9e60d9_added_images_urls.py
integrations-service/: Dockerfile  README.md  drizzle.config.ts  package.json
integrations-service/src/: index.ts
