[project]
name = "ai-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi[standard]>=0.135.1",
    "hdbscan>=0.8.41",
    "pgvector>=0.4.2",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.67.0",
    "pydantic-graph>=1.67.0",
    "qdrant-client>=1.17.0",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.41.0",
]
