[project]
name = "ai-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi[standard]>=0.135.1",
    "hdbscan>=0.8.41",
    "mistralai>=1.9.11,<2",
    "pgvector>=0.4.2",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.70.0",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.41.0",
]
